# crabshell

./: .gitignore  Dockerfile  LICENSE  README.md  README_CN.md  kapp-config.json.example  pack.py  verify.sh  verify_key_obfuscation.py
.beads/: issues.jsonl
.github/: release.yml
.github/workflows/: build.yml  emulator-smoke.yml  release.yml
crabshell-gui/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
crabshell-gui/scripts/: build-dmg.sh
crabshell-gui/src-tauri/: Cargo.toml  tauri.conf.json
crabshell-gui/src-tauri/icons/: icon.icns
crabshell-gui/src-tauri/src/: lib.rs  main.rs
crabshell-gui/src/renderer/: App.tsx  i18n.ts  index.html  index.tsx
crabshell-gui/src/renderer/api/: tauri.ts
crabshell-gui/src/renderer/components/: ActionButtons.tsx  FileInput.tsx  HardeningOptions.tsx  LanguageSwitcher.tsx  OutputSettings.tsx  ProgressBar.tsx  SigningConfig.tsx
crabshell-gui/src/shared/: types.ts
fixtures/test-apps/: settings.gradle
fixtures/test-apps/kappa/: build.gradle  proguard-rules.pro
fixtures/test-apps/kappb/: build.gradle
loader/: settings.gradle
loader/app/: build.gradle  proguard-rules.pro
loader/app/src/main/: AndroidManifest.xml
packer/: Cargo.toml  build.rs
packer/src/: config.defaults.rs  main.rs
scripts/: check_hardened_apk.py  ci_emulator_smoke.sh  manifest_patch.py  test_check_hardened_apk.py  test_on_emulator.sh  test_pack_aab_conversion.py  test_pack_build_flow.py  test_pack_main_helpers.py  test_pack_skip_build.py  test_workflow_fast_checks.py
(+18 files in other folders)
