[package]
name = "crabshell-gui"
version = "1.0.0"
description = "CrabShell GUI"
authors = ["CrabShell Team"]
edition = "2021"

[lib]
name = "crabshell_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
rfd = "0.15"
